# bfme2-installer

./: .gitignore  Cargo.toml  README.md
src/: main.rs
src/checksums/: mod.rs
src/common/: mod.rs
src/components/: mod.rs
src/extract/: mod.rs
src/installer/: mod.rs
src/reg/: bfme2.reg  mod.rs  rotwk.rs
src/resource/userdata/: options.ini
