[package]
name = "bfme2-installer"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced = { version = "0.3", features = ["canvas", "tokio", "debug"] }
iced_native = "0.4.0"
iced_graphics = "0.2.0"
chrono = "0.4"