[package]
name = "bfme2-installer"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced = { version = "0.3", features = ["canvas", "tokio", "debug"] }
iced_native = "0.4.0"
iced_graphics = "0.2.0"
iced_futures = "0.3.0"
chrono = "0.4"
tar = "0.4.37"
flate2 = "1.0.22"
md-5 = "0.9.1"
handlebars = "4.1.3"
tempfile = "3.2.0"