[package]
name = "bfme2-installer"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced = { version = "0.3", features = ["canvas", "tokio", "debug"] }
iced_native = "0.4.0"
iced_graphics = "0.2.0"
iced_futures = "0.3.0"
chrono = "0.4"
tar = "0.4.37"
flate2 = "1.0.22"
md-5 = "0.9.1"
handlebars = "4.1.3"
tempfile = "3.2.0"
regex = "1.5.4"
phf = { version = "0.10.0", features = ["macros"] }

[target.x86_64-pc-windows-gnu]
linker = "x86_64-w64-mingw32-gcc"
ar = "x86_64-w64-mingw32-gcc-ar"

[target.x86_64-pc-windows-msvc]
rustflags = ["-C", "target-feature=+crt-static"]

[target.'cfg(windows)'.dependencies]
winreg = "0.10.1"
